[package]
name = "hype"
version = "0.0.0"
edition = "2018"

[features]
preemptive = ["tokio-threadpool/preemptive"]

[dependencies]
pretty_env_logger = "*"
hyper = "0.12.35"
tokio-threadpool = "*"

[patch.crates-io.tokio]
path = "tokio/tokio"

[patch.crates-io.tokio-threadpool]
path = "tokio/tokio-threadpool"

[lib]
harness = false

[dev-dependencies]
bencher = "*"
