[workspace]

members = [
  "tokio",
  "tokio-buf",
  "tokio-codec",
  "tokio-current-thread",
  "tokio-executor",
  "tokio-fs",
  "tokio-futures",
  "tokio-io",
  "tokio-reactor",
  "tokio-signal",
  "tokio-sync",
  "tokio-test",
  "tokio-threadpool",
  "tokio-timer",
  "tokio-tcp",
  "tokio-tls",
  "tokio-udp",
  "tokio-uds",
]

[patch.crates-io.futures]
path = "../futures"

[patch.crates-io.tokio-executor]
path = "tokio-executor"

[patch.crates-io.tokio-threadpool]
path = "tokio-threadpool"
